# Test-repo

cpp/: CMakeLists-work.txt  CMakeLists.txt  Empty property namekaa.status  Empty property namekey.private  Empty property namekey.public  build.sh  power_plant.cfg
cpp/libs/kaa/avro/: configuration.avsc  log.avsc
cpp/libs/kaa/impl/: KaaDefaults.cpp
cpp/libs/kaa/kaa/log/: DefaultLogUploadStrategy.hpp
cpp/src/: PowerPlantController.cpp  ReportingManager.cpp  SolarPanel.cpp  SolarPanel.hpp
cpp/src-or/: PowerPlantController.cpp  SolarPanel.cpp  SolarPanel.hpp
